fixing overflow in group preview

--- a/frontend/src/assets/styles/cmps/_add-task.scss
+++ b/frontend/src/assets/styles/cmps/_add-task.scss
@@ -1,32 +1,6 @@
 .add-task {
-    margin: 0 4px;
     padding-bottom: 8px;
-    // max-height: 38px;
     min-height: 38px;
-    // height: 38px;
-
-    .open-form {
-        display: flex;
-        align-items: center;
-        height: 100%;
-        padding: 4px 8px;
-        border-radius: 3px;
-        color: #5e6c84;
-        cursor: pointer;
-        // margin-inline-start: 8px;
-
-        &:hover {
-            background-color: #091e4214;
-            color: $clr2;
-        }
-
-        svg {
-            width: 14px;
-            height: 14px;
-            margin-inline-end: 2px;
-        }
-
-    }
 
     textarea {
         font-family: inherit;
@@ -37,7 +11,6 @@
         border-radius: 3px;
         box-shadow: var(--ds-shadow-raised, 0 1px 0 rgba(9, 30, 66, 0.2509803922));
         width: 100%;
-        // margin-bottom: 8px;
         padding: 6px 8px 2px;
         min-height: 54px;
 
